--- a/style.css
+++ b/style.css
@@ -29,6 +29,10 @@ h3 {
     -webkit-text-fill-color: transparent;
 }
 
+.color2 {
+    color: #FF42A5;
+}
+
 .cmn-btn {
     height: 30px;
     width: 80px;
@@ -70,10 +74,6 @@ a {
 
 .logo-div img {
     padding-right: 10px;
-}
-
-span {
-    color: #FF42A5;
 }
 
 .nav-right {
@@ -199,10 +199,11 @@ span {
 }
 
 /* hover with icon ------------*/
-.games-card{
+.games-card {
     position: relative;
-    
+
 }
+
 .overlay {
     position: absolute;
     top: 0;
@@ -224,4 +225,50 @@ span {
     position: absolute;
     top: 30%;
     left: 35%;
+}
+
+
+
+/* Z-index-------------------- */
+.index-flex1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 120px;
+    text-align: right;
+    margin: 40px 0;
+}
+
+.play-guide {
+    margin-top: 20px;
+}
+
+.index-side-img img {
+    width: 300px;
+    height: 300px;
+    position: relative;
+}
+
+.index-img img {
+    width: 130px;
+    height: 140px;
+    position: absolute;
+    left: 45%;
+    bottom: -70%;
+    z-index: 1;
+}
+
+/* z-index2------------- */
+.z-index2 {
+    position: relative;
+    margin: 100px 0;
+}
+
+.index-flex2 {
+    flex-direction: row-reverse;
+}
+
+.index-img2 img{
+    left: 40%;
+    bottom: -10%;
 }
