--- a/responsive.css
+++ b/responsive.css
@@ -118,10 +118,15 @@
         height: 230px;
     }
 
+
+    /* games types */
+    .types-container {
+        grid-template-columns: repeat(2, auto);
+        gap: 5px;
+
+    }
+
 }
-
-
-
 
 
 
@@ -203,5 +208,12 @@
 
     .future-img img {
         height: 300px;
+    }
+
+    /* games types */
+    .types-container {
+        grid-template-columns: repeat(4, auto);
+        gap: 5px;
+
     }
 }
