--- a/style.css
+++ b/style.css
@@ -360,3 +360,37 @@ a {
     color: #FF42A5;
     border-radius: 20px;
 }
+
+
+/* footer */
+footer{
+    list-style: none;
+    text-decoration: none;
+    background: #0B0223;
+    text-align: center;
+    color: white;
+    padding: 100px 0;
+    font-size: .8rem;
+}
+footer a{
+    color: white;
+}
+.footer-logo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 20PX;
+}
+.about-link, .join-us, .policy{
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+    align-items: center;
+    padding: 10px 0px;
+}
+.copy-right{
+    padding-top: 50px;
+    color: #8758F1;
+}
+
+
