--- a/responsive.css
+++ b/responsive.css
@@ -62,16 +62,18 @@
     }
 
     .games-card-content {
-        width: 180px;
+        width: 190px;
         height: 300px;
     }
 
     .online-games-title {
         font-size: 1.5rem;
+        padding-bottom: 5px;
     }
 
     .online-collection {
         font-size: 10px;
+        padding-bottom: 30px;
     }
 
 
@@ -121,7 +123,8 @@
 
     /* games types */
     .types-container {
-        grid-template-columns: repeat(2, auto);
+        font-size: .7rem;
+        grid-template-columns: repeat(3, auto);
         gap: 5px;
 
     }
@@ -129,17 +132,29 @@
     /* footer */
     footer {
         padding: 20px 0;
-        font-size: .6rem;
+        font-size: 1rem;
     }
 
-    .about-link,
-    .join-us,
-    .policy {
-        display: flex;
+    .about-link{
+        display: grid;
+        grid-template-columns: repeat(3,80px);
         justify-content: center;
-        gap: 5px;
+        align-content: center;
+        row-gap: 3px;
+    }
+
+
+    .join-us{
+        padding-top: 10px;
+        /* width: min-content; */
+        display: grid;
+        grid-template-columns: repeat(3, 50px);
+    }
+    .policy {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        justify-content: center;
         align-items: center;
-        padding: 5px 0px;
     }
 
     .join-us img {
@@ -151,6 +166,8 @@
     }
 
 }
+
+
 
 
 
