--- a/style.css
+++ b/style.css
@@ -34,19 +34,13 @@ h3 {
 }
 
 .cmn-btn {
-    height: 30px;
-    width: 80px;
-    border-radius: 10px;
+    border-radius: 15px;
     border: none;
-    margin: 20px 5px;
+    margin: 20px auto;
+    padding: 10px 20px;
     color: white;
     background-color: #FF42A5;
 }
-
-/* body {
-    margin: 20px;
-    border: 1px solid red;
-} */
 
 a {
     text-decoration: none;
@@ -123,10 +117,10 @@ a {
     width: 1.5rem;
     height: 1.5rem;
 }
-
 .btn2 {
     background: #4EC5F7;
 }
+
 
 .banner1-about {
     background-image: url("./images/Group14.png");
@@ -329,7 +323,6 @@ a {
     background: white;
     color: #db4592;
     font-weight: 550;
-    width: 130px;
     margin-top: 40px;
 }
 
@@ -375,7 +368,7 @@ footer{
     background: #0B0223;
     text-align: center;
     color: white;
-    padding: 100px 0;
+    padding: 100px 0px;
     font-size: .8rem;
 }
 footer a{
@@ -390,7 +383,7 @@ footer a{
 .about-link, .join-us, .policy{
     display: flex;
     justify-content: center;
-    gap: 15px;
+    gap: 25px;
     align-items: center;
     padding: 10px 0px;
 }
